--- a/style.css
+++ b/style.css
@@ -5,3 +5,16 @@
     max-width: 80%;
     margin: 0 auto;
 }
+
+.mt-100{
+    margin-top: 100px;
+}
+.mb-50{
+    margin-bottom: 100px;
+}
+
+
+/*----------Landing Section ----------*/
+.landing-section{
+    min-height: calc(100vh - 100px);
+}
