Stay focused section added

--- a/style.css
+++ b/style.css
@@ -49,3 +49,9 @@
     transform: translateY(-50%);
     right: -7%;
 }
+
+/*----------Focused Section ----------*/
+.focused{
+    background-color: #F1F4F8;
+    padding: 130px 0 80px 0;
+}
