Full site almost done

--- a/style.css
+++ b/style.css
@@ -51,7 +51,17 @@
 }
 
 /*----------Focused Section ----------*/
-.focused{
+.focused, .pricing{
     background-color: #F1F4F8;
-    padding: 130px 0 80px 0;
+    padding: 130px 0 50px 0;
+}
+.pricing .card-standard{
+    transform: scale(1.1)
+}
+
+/*----------FAQ ----------*/
+.faq{
+    background-color: #1B2A4E;
+    color: #fff;
+    padding: 100px 0 60px 0;
 }
